htdocs/t/default.css
/* ... */
/*.border>div*/ .border-links a { display: block; text-decoration: none; float: left; height: 1.64em; line-height: 1.5; padding: 1px 0; color: #fff; margin-right: 12px; }
.border-links a b { height: 1.64em; display: block; border: 0 solid transparent; border-width: 0 1px; position: relative; top: 1px; padding: 0 11px; margin: -1px; }
.border-links a.now, .border-links a.selected, .border-links a:hover { background: #0392f1; }
.border-links a.now b, .border-links a.selected b, .border-links a:hover b { border-color: #0392f1; }

body,table,
h1,h2,h3,h4,
p,form,
fieldset,legend,
ol,ul,li,dl,dt,dd{margin:0;padding:0;border:0;font-weight:normal;list-style:none;}
h2,h3,h4,h5,h6{font-weight:normal;font-size:16px;}
td{font-size:1em;vertical-align:top;}
a{color :#0392f1;cursor :pointer;
text-decoration :underline;}
a:hover{text-decoration:none;}
img{vertical-align:middle;}
a img{border:0;}
input,select,textarea{font:1.1em Tahoma,Arial,sans-serif;}
input[type="password"],
input[type="text"]{height:20px;margin-left:0;padding:4px 0 0 4px;line-height:24px;}
ul{list-style-type:none;}
table{border:0;border-collapse:collapse;}
table td{padding:0;}
.to-print{display:none;}

html{background:#fff url(/t/alchogol-sucks.png) no-repeat center 98.5%;}
body{font:62.5% Tahoma,Arial,sans-serif;color:#343b40;position:relative;min-height:100%;padding:0 0 90px 0;}

#top{position:relative;height:65px;width:100%;font-size:12px;margin:0 auto 40px; background: #000000 url(bg/body/index.png) repeat-x scroll 0 0;}
#top #top-content {margin: 0 auto; width: 960px;}
#top h2,
#top h1{float:left; position:relative; left:-9px; bottom: -3px;}
#top .nav{background:#000 url(bg/body/index.png) repeat-x 0 0;overflow:hidden;margin-left:190px;font-weight:bold;}
#top .nav li{float:left;margin-right:16px;}
#top .nav a{display:block;display:inline-block;height:49px;font-size:14px;text-decoration:none;color:#fff;line-height:48px;padding:8px 18px;}
#top .nav a.now{background:url(bg/nav/top.png) repeat-x 0 19px !important;cursor:default;}
#top .nav a:hover{background:url(bg/nav/top.png) repeat-x 0 bottom;}
#top .nav img{}
#top .nav2{display:none;position:absolute;right:0;top:84px;line-height:24px;/*index-page*/}
#top form{position:absolute;right:0;top:20px;display:none;}
#top form input{font-size:11px;height:17px;border:1px solid #fff;border-top-color:#c9c9c9;line-height:17px;padding-top:2px;width:175px;margin-right:10px;}
form button{vertical-align:top;}
form input{vertical-align:middle;}
form p{display:inline;}
form .b p{display:block;padding:0;}
label{display:block;}
#main-wrapper{margin:0 auto;width:960px; position:relative;}
.index-wrapper{position:relative;height:420px;}
/* Index form login */

.column-mini,
.column{border:0 solid #c0c0c0;border-width:0 1px;background:#fff;float:left;width:100%;}
.column-main{width:628px;}
.column-mini{width:31.3em;margin-left:8px;margin-bottom:11px;}

.column-main-container{width:630px;float:left;}
.body-wrapper{border:0 solid #fff;border-width:0 1px;background:#fff url(bg/body/body-wrapper.png) repeat-x 0 0;padding:14px 18px;}
.b-title{background:url(bg/body/hr-repeat.png) repeat-x 0 100%;margin-bottom:9px;padding-bottom:11px;position:relative;}

.b-title h1,
.b-title h2{font-size:20px;margin-left:-1px;}
.b-title #spotlighted { display: none; position:absolute;right:0;bottom:15px;font-size:110%; width:21px; height: 21px; background:transparent url(/t/icon/spotlighted.png) no-repeat;}
.b-title #partner {display:block; position:absolute;right:0;bottom:8px;width:57px; height: 27px; background:transparent url(/t/icon/partner.png) no-repeat;}
.b-title #photographer {display:block; position:absolute;right:0;bottom:6px;width:40px; height: 33px; background:transparent url(/t/icon/camera.png) no-repeat;}
.b-title .hrefs {position:absolute; right:0; bottom:15px; font-size:110%;}
.b-search{float:left;margin-right:2em;width:14em;}
#all_list{background:url(icon/all-list.jpg) no-repeat;font-size:1.1em;padding:0 0 0 20px; margin-top: -22px; position:relative; float:right; height:19px;}
.b-search dl{font-size:120%;line-height:1.5;}
.b-search dt{font-weight:bold;padding:16px 0 0 6px;}
.b-search dd{line-height:1.4;margin:1px 0;height:17px;}
.b-search dd{line-height:1.4;margin:1px 0;height:17px;}

.b-search .groups dd.selected-button {background:url(/t/bg/blocks/group-selected.png) no-repeat; width: 140px; height:17px; line-height:16px; }
.b-search .groups dd.selected-button .rem{float:right;background:url(icon/remove.png);width:11px;height:11px;overflow:hidden;text-indent:-100em;display:block;margin:3px 9px 0 0;}
.b-search .groups dd.selected-button:hover .rem{background:url(icon/remove_hi.png);}
.b-search .groups dd.selected-button span {color: #fff; text-decoration: none;}

.b-search .groups dd { cursor: pointer; }
.b-search .groups dd a{margin-left:10px;height:1.33em;}
.b-search .groups dd span{margin-left: 6px; float: left; color: #0392f1; text-decoration: underline;}
.b-search .groups dd.dis span,
.b-search .groups dd.dis a {color:#999;text-decoration:none;cursor:default;}

.search-control {background:url(bg/blocks/green-line.png) no-repeat; padding:5px; color:#fff; height: 22px;}
.search-form strong{font-size:120%;line-height:1;display:block;padding:12px 0 17px 0;}
.search-form input{width:575px; padding:2px 0 2px 4px;font-size:14px;text-align:left; background: #f4f7c2; line-height: 18px; height:18px; border: none;}
.search-form small{color:#f1f7b6;line-height:1.5;display:block;}
.search-form dl{overflow:hidden;}
.search-form dt{padding:0;font-size:92%;}
.search-form dd{background-color:#89af21;cursor:pointer;margin-bottom:3px;height:auto;overflow:hidden;padding:0 0 2px;}
.search-form span{float:left;text-decoration:underline;font-size:11px;padding-left:6px;width:100px;}

#cocktails-page .body-wrapper { overflow: hidden; }
#cocktails-page .b-title, #cocktail-page .b-title { padding-bottom: 11px; }
#cocktails-page .b-title h1, #cocktail-page .b-title h1 {font-size:20px } 
/* ... */

